--- a/cell02/ex03/card.css
+++ b/cell02/ex03/card.css
@@ -4,7 +4,7 @@ h1 {
     font-weight: bold;
 }
 
-h2 {
+th {
     margin-top: 15px;
     margin-bottom: 15px;
     font-family: helvetica;
@@ -91,9 +91,18 @@ table {
     height: 30px;  /* 16:9 */
     width: 250px;   /* 16:9 */
     background-color: rgb(0, 0, 0);
+    border: 0px;
     border-radius: 0px 0px 8px 8px;
 
     display: flex;  
     align-items: center;
     justify-content: center;
+}
+
+.contact:hover {
+    background-color: rgb(95, 95, 95);
+}
+
+.contact:active {
+    background-color: rgb(0, 0, 0);
 }
